@@ -1,6 +1,8 @@
-2004-07-25  Yoichi NAKAYAMA  <yoichi@geiin.org>
+2004-07-27  Yoichi NAKAYAMA  <yoichi@geiin.org>
 
-	* mel-g.el (TopLevel): Cause error when "mmencode" is not found.
+	* mel-g.el (gzip64-external-encoder): Change default value to
+	cause more recognizable error.
+	(gzip64-external-decoder): Ditto.
 
 2004-06-09  Yoichi NAKAYAMA  <yoichi@geiin.org>
 
